Update to PDF.js in chrome extension to v1.0.277
1. Use different insertion method.

Old method:
 - First PDF.js does it's magic, and redirects the page from the
   original document to it's own HTML content (the viewer)
 - Then embed.js injects the Hypothes.is code to the HTML page.

New method:
 - We embed our code directly in the viewer

Details:
 - I created a fork of viewer.html, the only change being
   that it also includes a reference to our embed script.
   PDF documents are rendered using this viewer
 - I have created a different embed.js version, called embed-pdf.js,
   tailored for this specific use-case. The main difference is that
   it actually uses eval() to run the code, instead of inserting a script
   tag. This was necessary because Chrome really, really hates inline
   JS code in extensions, and it's probably impossible to configure
   a CSP which would allow this.

2. Don't load the Document plugin for PDF files

3. Add support for proper URL and metadata extraction for PDF

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -20,23 +20,60 @@
     "clipboardWrite",
     "contentSettings",
     "tabs",
+    "fileBrowserHandler",
     "webRequest",
     "webRequestBlocking",
+    "storage",
     "webNavigation"
   ],
+  "content_scripts": [{
+    "matches": [
+      "http://*/*",
+      "https://*/*",
+      "ftp://*/*",
+      "file://*/*"
+    ],
+    "run_at": "document_start",
+    "all_frames": true,
+    "css": ["contentstyle.css"],
+    "js": ["contentscript.js"]
+  }],
   "content_security_policy":
     "script-src 'self' 'unsafe-eval' ${src}; object-src 'self'",
 
+  "file_browser_handlers": [{
+     "id": "open-as-pdf",
+     "default_title": "Open with Hypothes.is + PDF Viewer",
+     "file_filters": [
+       "filesystem:*.pdf"
+     ]
+  }],
   "background": {
     "persistent": true,
-    "scripts": ["background.js"]
+    "scripts": [
+	"chrome.tabs.executeScriptInFrame.js",
+	"feature-detect.js",
+	"pdfHandler.js",
+	"extension-router.js",
+	"pdfHandler-v2.js",
+	"pdfHandler-vcros.js",
+	"background.js"
+    ]
   },
+  "incognito": "split",
   "page_action": {
     "placeholder": "work around http://crbug.com/86449"
   },
   "web_accessible_resources": [
     "public/*",
-    "content/*",
-    "patch-worker.js"
+    "getFrameId",
+    "content/web/viewer.html",
+    "http:/*",
+    "https:/*",
+    "ftp:/*",
+    "file:/*",
+    "chrome-extension:/*",
+    "filesystem:/*",
+    "drive:*"
   ]
 }
