--- a/assets.yaml
+++ b/assets.yaml
@@ -282,6 +282,7 @@ app_js:
           contents:
             - scripts/app.coffee
             - scripts/controllers.coffee
+            - scripts/controllers/account-management.coffee
             - scripts/flash.coffee
             - scripts/filters.coffee
             - scripts/directives.coffee
