Put annotation code together as a directive
Get rid of app_directives.coffee and make it into annotation.coffee
under the directives folder. Put the annotation controller from
controllers.coffee in with it.

--- a/assets.yaml
+++ b/assets.yaml
@@ -287,7 +287,7 @@ app_js:
             - scripts/directives.coffee
             - scripts/directives/simple-search.coffee
             - scripts/directives/status-button.coffee
-            - scripts/app_directives.coffee
+            - scripts/directives/annotation.coffee
             - scripts/helpers.coffee
             - scripts/services.coffee
             - scripts/socket.coffee
