--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,7 @@ horus.login_redirect: stream
 horus.logout_redirect: login
 horus.activate_redirect: stream
 
-multiauth.policies: h.auth.local h.api
+multiauth.policies: h.api h.auth.local
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
