--- a/assets.yaml
+++ b/assets.yaml
@@ -305,6 +305,7 @@ app_css:
           - h:static/styles/app.scss
         depends:
           - h:static/styles/base.scss
+          - h:static/styles/mixins/forms.scss
           - h:static/styles/common.scss
           - h:static/styles/responsive.scss
           - h:static/styles/threads.scss
