--- a/assets.yaml
+++ b/assets.yaml
@@ -314,6 +314,7 @@ app_css:
           - h:static/styles/reset.scss
           - h:static/styles/spinner.scss
           - h:static/styles/simple-search.scss
+          - h:static/styles/tags-input.scss
 
 # Authentication
 auth:
