--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -11,7 +11,6 @@
   },
 
   "homepage_url": "https://hypothes.is/",
-  "incognito": "split",
 
   "offline_enabled": false,
   "permissions": [
@@ -20,23 +19,44 @@
     "clipboardWrite",
     "contentSettings",
     "tabs",
+    "fileBrowserHandler",
     "webRequest",
     "webRequestBlocking",
+    "storage",
     "webNavigation"
   ],
   "content_security_policy":
     "script-src 'self' 'unsafe-eval' ${src}; object-src 'self'",
 
+  "file_browser_handlers": [{
+     "id": "open-as-pdf",
+     "default_title": "Open with Hypothes.is",
+     "file_filters": [
+       "filesystem:*.pdf"
+     ]
+  }],
   "background": {
     "persistent": true,
-    "scripts": ["background.js"]
+    "scripts": [
+	"feature-detect.js",
+	"extension-router.js",
+	"background.js"
+    ]
   },
+  "incognito": "split",
   "page_action": {
     "placeholder": "work around http://crbug.com/86449"
   },
   "web_accessible_resources": [
     "public/*",
-    "content/*",
-    "patch-worker.js"
+    "getFrameId",
+    "content/web/viewer.html",
+    "http:/*",
+    "https:/*",
+    "ftp:/*",
+    "file:/*",
+    "chrome-extension:/*",
+    "filesystem:/*",
+    "drive:*"
   ]
 }
