Refactor back end authentication
Change the authentication to encapsulate it better within the h.auth
package, removing details from h.api and making more idiomatic use
of OAuthLib.

- Move ``h.auth.local`` to ``h.accounts``.

- Split remaining pieces of ``h.auth`` into an ``h.oauth`` package and
  modules ``h.authentication`` and ``h.authorization``.

- Move ``h.interfaces.IConsumerClass`` to the ``h.oauth`` package and
  rename it ``IClientClass``.

- Add ``request.get_client`` and ``config.set_client_factory``.

- Drop pyramid_multiauth and replace it with better considered use of
  pyramid_oauthlib.

- Stop the confusing double-use of 'request.user' by unsetting the
  request property set by horus.

- Move session configuration to h.session.

- Drop the consumer/client implementation in the accounts system in
  favor of shipping only with a default. This is a place that can be
  expanded later once there is a model in place for relating
  authorizations, clients and users. Until then, the default will
  be sufficient.

--- a/development.ini
+++ b/development.ini
@@ -1,8 +1,6 @@
 [app:main]
 use: egg:h
 
-api.key: 00000000-0000-0000-0000-000000000000
-
 # Don't create/update indices and mappings by default. You will need to
 # uncomment this if running multiple web workers.
 #basemodel.should_create_all = False
@@ -21,15 +19,14 @@ horus.login_redirect: stream
 horus.logout_redirect: login
 horus.activate_redirect: stream
 
-multiauth.policies: h.auth.local h.api
-
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
+    h.accounts
     h.queue.local
-    pyramid_multiauth
+    h.session
     pyramid_basemodel
     pyramid_debugtoolbar
     pyramid_mailer
