--- a/production.ini
+++ b/production.ini
@@ -2,29 +2,18 @@
 use: egg:h
 filter-with: proxy-prefix
 
-# API configuration
-#
-# Customize the key or leave it as the default. If the key is present without
-# a secret, initializes the consumer in the API consumer table with a random
-# secret.
-#
-# Example:
-#    api.key: fdf077b5-c210-4744-b1e2-db4c577d195e
-#    api.secret: fb8557f0-34ba-462e-92af-54620a1d87c7
-api.key: 00000000-0000-0000-0000-000000000000
-
-# Authentication settings
-# Add subsections for each provider included with the multiauth setting below.
-# The local annotator API is handled by the api section above.
-#auth.local.authorization: /oauth/authorize
-#auth.local.token: /oauth/token
-
 # Don't create/update indices and mappings by default
 basemodel.should_create_all: False
 
 # ElasticSearch configuration
 #es.host: http://localhost:9200
 #es.index: annotator
+
+# OAuth settings
+# These client credentials are used by the built-in Web client.
+# If not provided, both default to a random URL-safe base64-encoded string.
+#h.client_id:
+#h.client_secret:
 
 # Feature flags
 h.feature.api: True
@@ -41,9 +30,6 @@ horus.activate_redirect: login
 #horus.allow_email_auth: False
 #horus.require_activation: True
 
-# Authorization settings -- see pyramid_multiauth documentation
-multiauth.policies: h.auth.local h.api
-
 # Mail server configuration -- see the pyramid_mailer documentation
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 #mail.host: localhost
@@ -51,8 +37,8 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
+    h.accounts
     h.queue.local
-    pyramid_multiauth
     pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
