--- a/production.ini
+++ b/production.ini
@@ -35,9 +35,6 @@ horus.activate_redirect: login
 #horus.allow_email_auth: False
 #horus.require_activation: True
 
-# Authorization settings -- see pyramid_multiauth documentation
-multiauth.policies: h.auth.local h.api
-
 # Mail server configuration -- see the pyramid_mailer documentation
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 #mail.host: localhost
@@ -45,7 +42,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
-    h
+    h.auth.local
     pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
