Move the util object into a form helper
This brings it inline with the helpers.coffee, and now uses .factory
instead of .service to register the object.

--- a/assets.yaml
+++ b/assets.yaml
@@ -291,7 +291,7 @@ app_js:
             - scripts/directives/annotation.coffee
             - scripts/helpers.coffee
             - scripts/services.coffee
-            - scripts/util.coffee
+            - scripts/helpers/form-helpers.coffee
             - scripts/socket.coffee
             - scripts/searchfilters.coffee
             - scripts/streamsearch.coffee
