--- a/assets.yaml
+++ b/assets.yaml
@@ -276,6 +276,7 @@ app_js:
             - scripts/directives.coffee
             - scripts/directives/simple-search.coffee
             - scripts/directives/status-button.coffee
+            - scripts/directives/thread.coffee
             - scripts/directives/annotation.coffee
             - scripts/services.coffee
             - scripts/helpers/form-helpers.coffee
