--- a/assets.yaml
+++ b/assets.yaml
@@ -40,12 +40,9 @@ annotator_fuzzytextanchors:
   output: scripts/vendor/annotator.fuzzytextanchors.min.js
   contents:
     - h:static/scripts/vendor/diff_match_patch_uncompressed.js
-    - filters: coffeescript
-      output: scripts/vendor/dom_text.js
-      contents:
-        - h:static/scripts/vendor/dom_text_mapper.coffee
-        - h:static/scripts/vendor/dom_text_matcher.coffee
-        - h:static/scripts/vendor/text_match_engines.coffee
+    - h:static/scripts/vendor/dom_text_mapper.js
+    - h:static/scripts/vendor/dom_text_matcher.js
+    - h:static/scripts/vendor/text_match_engines.js
     - h:static/scripts/vendor/annotator.domtextmapper.js
     - h:static/scripts/vendor/annotator.textanchors.js
     - h:static/scripts/vendor/annotator.fuzzytextanchors.js
@@ -53,10 +50,7 @@ annotator_pdf:
   filters: uglifyjs
   output: scripts/vendor/annotator.pdf.min.js
   contents:
-    - filters: coffeescript
-      output: scripts/vendor/page_text_mapper_core.js
-      contents:
-        - h:static/scripts/vendor/page_text_mapper_core.coffee
+    - h:static/scripts/vendor/page_text_mapper_core.js
     - h:static/scripts/vendor/annotator.pdf.js
 annotator_textanchors:
   filters: uglifyjs
