Add MathJax CDN and calls to render math.

--- a/assets.yaml
+++ b/assets.yaml
@@ -190,6 +190,9 @@ jwz:
   output: scripts/vendor/jwz.min.js
   contents:
     - h:static/scripts/vendor/jwz.js
+mathjax:
+  contents:
+    - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 momentjs:
   contents:
     - filters: uglifyjs
@@ -253,6 +256,7 @@ app:
     - annotator_threading
     - jschannel
     - jwz
+    - mathjax
     - momentjs
     - pagedown
     - autofill
