--- a/assets.yaml
+++ b/assets.yaml
@@ -277,6 +277,7 @@ app_js:
             - scripts/directives/simple-search.coffee
             - scripts/directives/status-button.coffee
             - scripts/directives/thread.coffee
+            - scripts/directives/threadFilter.coffee
             - scripts/directives/annotation.coffee
             - scripts/services.coffee
             - scripts/helpers/form-helpers.coffee
