--- a/assets.yaml
+++ b/assets.yaml
@@ -268,24 +268,24 @@ app_js:
           # TODO: glob these or use browserify
           # Right now results in dependency problems
           contents:
-            - scripts/app.coffee
-            - scripts/controllers.coffee
-            - scripts/controllers/account-management.coffee
-            - scripts/flash.coffee
-            - scripts/filters.coffee
-            - scripts/directives.coffee
-            - scripts/directives/deep-count.coffee
-            - scripts/directives/simple-search.coffee
-            - scripts/directives/status-button.coffee
-            - scripts/directives/thread.coffee
-            - scripts/directives/thread-filter.coffee
-            - scripts/directives/annotation.coffee
-            - scripts/services.coffee
-            - scripts/helpers/form-helpers.coffee
-            - scripts/helpers/document-helpers.coffee
-            - scripts/socket.coffee
-            - scripts/searchfilters.coffee
-            - scripts/streamsearch.coffee
+            - h:scripts/app.coffee
+            - h:scripts/controllers.coffee
+            - h:scripts/controllers/account-management.coffee
+            - h:scripts/flash.coffee
+            - h:scripts/filters.coffee
+            - h:scripts/directives.coffee
+            - h:scripts/directives/deep-count.coffee
+            - h:scripts/directives/simple-search.coffee
+            - h:scripts/directives/status-button.coffee
+            - h:scripts/directives/thread.coffee
+            - h:scripts/directives/thread-filter.coffee
+            - h:scripts/directives/annotation.coffee
+            - h:scripts/services.coffee
+            - h:scripts/helpers/form-helpers.coffee
+            - h:scripts/helpers/document-helpers.coffee
+            - h:scripts/socket.coffee
+            - h:scripts/searchfilters.coffee
+            - h:scripts/streamsearch.coffee
 
 app_css:
     filters: cleancss
