Pass h logger through to root
And set the root to NOTSET explicitly.

--- a/development.ini
+++ b/development.ini
@@ -63,7 +63,7 @@ keys = generic
 
 
 [logger_root]
-level = INFO
+level = NOTSET
 handlers = console
 
 
@@ -83,9 +83,8 @@ propagate = 1
 
 [logger_h]
 level = DEBUG
-handlers = console
+handlers =
 qualname = h
-propagate = 0
 
 
 [logger_sqlalchemy]
