Tweak logging setup
Change the logging setup to use the same format as Gunicorn defaults.
Strip the redundant default args to the console handler. Remove the
extra loggers whose defaults are fine. Remove the access log config.
Set the root logger in development.ini to INFO.

I had a fundamental misunderstanding of Python loggers. I thought that
for a logger to handle a message its effective level was determined by
traversing all the way to the root and clamping the log level to the
highest configured logger. It turns out that it's the first ancestor
to have a level set that determines the effective level. Therefore,
it's sufficient to set 'h' to DEBUG but leave the root at INFO in
order to get debug message from the application and info messages
from other packages.

The gunicorn.access logger is unnecessary to configure. It isn't
enabled without a switch in the server config, or a --access-logfile,
so we'll leave it out.

I also removed places where I wrote WARN instead of WARNING (all of
these were redundant since NOTSET is the default and WARNING is the
default for the root) or had the propagate setting redundantly set to
True (also the default).

Close #1512

--- a/development.ini
+++ b/development.ini
@@ -51,7 +51,7 @@ worker_class: gevent
 
 
 [loggers]
-keys = root, gunicorn.access, gunicorn.error, h, sqlalchemy, annotator
+keys = root, gunicorn.error, alembic, h, sqlalchemy
 
 
 [handlers]
@@ -63,7 +63,7 @@ keys = generic
 
 
 [logger_root]
-level = NOTSET
+level = INFO
 handlers = console
 
 
@@ -71,14 +71,6 @@ handlers = console
 level = INFO
 handlers =
 qualname = gunicorn.error
-propagate = 1
-
-
-[logger_gunicorn.access]
-level = INFO
-handlers =
-qualname = gunicorn.access
-propagate = 1
 
 
 [logger_h]
@@ -99,17 +91,11 @@ handlers =
 qualname = alembic
 
 
-[logger_annotator]
-level = INFO
-handlers =
-qualname = annotator
-
-
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
+args = ()
 formatter = generic
 
 
 [formatter_generic]
-format = %(asctime)s %(levelname)-5.5s [%(name)s] %(message)s
+format = %(asctime)s [%(process)d] [%(levelname)s] %(message)s
