--- a/production.ini
+++ b/production.ini
@@ -93,7 +93,7 @@ worker_class: gevent
 
 
 [loggers]
-keys = root, gunicorn.access, gunicorn.error, h, sqlalchemy, annotator
+keys = root, gunicorn.error, alembic
 
 
 [handlers]
@@ -105,47 +105,25 @@ keys = generic
 
 
 [logger_root]
-level = WARN
 handlers = console
 
 
 [logger_gunicorn.error]
-level = WARN
 handlers =
 qualname = gunicorn.error
-propagate = 1
 
 
-[logger_gunicorn.access]
+[logger_alembic]
 level = INFO
 handlers =
-qualname = gunicorn.access
-propagate = 1
-
-
-[logger_h]
-level = WARN
-handlers =
-qualname = h
-
-
-[logger_sqlalchemy]
-level = WARN
-handlers =
-qualname = sqlalchemy.engine
-
-
-[logger_annotator]
-level = WARN
-handlers =
-qualname = annotator
+qualname = alembic
 
 
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
+args = ()
 formatter = generic
 
 
 [formatter_generic]
-format = %(asctime)s %(levelname)-5.5s [%(name)s] %(message)s
+format = %(asctime)s [%(process)d] [%(levelname)s] %(message)s
