--- a/assets.yaml
+++ b/assets.yaml
@@ -301,6 +301,7 @@ app_css:
           - h:static/styles/threads.scss
           - h:static/styles/yui_grid.scss
           - h:static/styles/forms.scss
+          - h:static/styles/markdown-editor.scss
           - h:static/styles/reset.scss
           - h:static/styles/spinner.scss
           - h:static/styles/styled-text.scss
