--- a/assets.yaml
+++ b/assets.yaml
@@ -180,6 +180,9 @@ jwz:
   output: scripts/vendor/jwz.min.js
   contents:
     - h:static/scripts/vendor/jwz.js
+katex:
+  contents:
+    - h:static/scripts/vendor/katex/katex.min.js
 momentjs:
   contents:
     - filters: uglifyjs
@@ -243,6 +246,7 @@ app:
     - annotator_threading
     - jschannel
     - jwz
+    - katex
     - momentjs
     - pagedown
     - autofill
@@ -288,6 +292,7 @@ app_css:
     output: styles/hypothesis.min.css
     contents:
       - theme
+      - h:static/scripts/vendor/katex/katex.min.css
       - filters: compass, cssrewrite
         output: styles/hypothesis.css
         contents:
