Decouple identity and authentication
Pull the identity service out of the auth module so that it can be
used separately. Wrap the service in a provider with properties
that applications can configure to adapt to different authentication
environments. These properties provide a way to configure injected
functions that the identity service can invoke in order to fulfill
requests from client applications for authorization grants without
tying the identity service itself to particular implementations of
sessions or authentication.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -277,6 +277,7 @@ app_js:
             - h:static/scripts/directives/thread.coffee
             - h:static/scripts/directives/thread-filter.coffee
             - h:static/scripts/directives/annotation.coffee
+            - h:static/scripts/identity.coffee
             - h:static/scripts/services.coffee
             - h:static/scripts/helpers/form-helpers.coffee
             - h:static/scripts/helpers/document-helpers.coffee
