Start to simplify our angular namespaces
Move toward cleaning up our angular namespaces and organization. By
flattening our namespaces and changing our file naming we're able to
reduce the boilerplate needed for angular module and asset bundle
definitions.

- Kill all the ``h.*`` angular submodules except for ``h.auth``,
  ``h.helpers`` and ``h.identity``. This vastly reduces the amount
  of dependency repetition throughout our angular files as all
  the dependencies of the entire main h module can be declared in
  app.coffee and all the other files simply add their exports to
  the main module.

- Add a helpers/helpers.coffee module definition file so that the
  rest of the helpers can use the 1-arity ``angular.module`` getter
  to attach themselves. These files can all be included with a glob
  in the asset bundle definition.

- Use the glob syntax to include all the directives in the asset
  bundle definition.

- Rename the controller modules in the auth bundle with a '-controller'
  suffix. These can be similarly globbed in the bundle definition.

- Make auth/auth.coffee a module definition file so that the
  rest of the component can use the 1-arity ``angular.module`` getter
  to attach themselves. These files can all be included with globs
  in the asset bundle definition.

- Ensure that all controllers are named in the ``FooController`` style.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -264,22 +264,16 @@ app_js:
           contents:
             - h:static/scripts/app.coffee
             - h:static/scripts/controllers.coffee
-            - h:static/scripts/flash.coffee
-            - h:static/scripts/filters.coffee
             - h:static/scripts/directives.coffee
-            - h:static/scripts/directives/deep-count.coffee
-            - h:static/scripts/directives/markdown.coffee
-            - h:static/scripts/directives/simple-search.coffee
-            - h:static/scripts/directives/status-button.coffee
-            - h:static/scripts/directives/thread.coffee
-            - h:static/scripts/directives/thread-filter.coffee
-            - h:static/scripts/directives/annotation.coffee
+            - h:static/scripts/directives/*.coffee
+            - h:static/scripts/filters.coffee
+            - h:static/scripts/flash.coffee
+            - h:static/scripts/helpers/helpers.coffee
+            - h:static/scripts/helpers/*-helpers.coffee
             - h:static/scripts/identity.coffee
-            - h:static/scripts/services.coffee
-            - h:static/scripts/helpers/form-helpers.coffee
-            - h:static/scripts/helpers/document-helpers.coffee
-            - h:static/scripts/socket.coffee
             - h:static/scripts/searchfilters.coffee
+            - h:static/scripts/services.coffee
+            - h:static/scripts/socket.coffee
             - h:static/scripts/streamsearch.coffee
 
 app_css:
@@ -327,7 +321,9 @@ auth_js:
     - output: scripts/hypothesis-auth.js
       filters: coffeescript
       contents:
-        - h:static/scripts/auth/*.coffee
+        - h:static/scripts/auth/auth.coffee
+        - h:static/scripts/auth/*-controller.coffee
+        - h:static/scripts/auth/*-service.coffee
 
 
 # The inject bundle is intended to be loaded into pages for bootstrapping
