Move session service back to h module
This is in preparation for using the so-called "Goldilocks API" of
Persona where we manage the session ourselves.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -275,6 +275,7 @@ app_js:
             - h:static/scripts/services.coffee
             - h:static/scripts/socket.coffee
             - h:static/scripts/streamsearch.coffee
+            - h:static/scripts/*-service.coffee
 
 app_css:
     filters: cleancss
